- since we always "thinking domain", we have to have some type system to make it easier for us, so converting what we have so far to typescript.
sure some scripts are needed, start stop, make it simple http server for auto reload purposes.

--- a/src/canvas.html
+++ b/src/canvas.html
@@ -91,11 +91,11 @@
         document.addEventListener('DOMContentLoaded', window.initCanvas);
     </script>
 
-    <!-- Load scripts -->
-    <script src="line.js"></script>
-    <script src="rectangle.js"></script>
-    <script src="circle.js"></script>
-    <script src="clear.js"></script>
-    <script src="cube.js"></script>
+    <!-- Load compiled JavaScript files from dist directory -->
+    <script src="../dist/line.js" type="module"></script>
+    <script src="../dist/rectangle.js" type="module"></script>
+    <script src="../dist/circle.js" type="module"></script>
+    <script src="../dist/clear.js" type="module"></script>
+    <script src="../dist/cube.js" type="module"></script>
 </body>
 </html>
