--- a/src/canvas.html
+++ b/src/canvas.html
@@ -4,46 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Cube</title>
-    <style>
-        body {
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
-        }
-        #canvas-container {
-            text-align: center;
-        }
-        canvas {
-            border: 2px solid #333;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        .controls {
-            margin: 20px 0;
-        }
-        button {
-            padding: 8px 16px;
-            margin: 0 5px;
-            cursor: pointer;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        #clearCanvas {
-            background-color: #f44336;
-        }
-        #clearCanvas:hover {
-            background-color: #d32f2f;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/canvas.css">
 </head>
 <body>
     <div id="canvas-container">
