- moving to models

--- a/src/canvas.html
+++ b/src/canvas.html
@@ -53,10 +53,10 @@
     </script>
 
     <!-- Load compiled JavaScript files from dist directory -->
-    <script src="../dist/line.js" type="module"></script>
-    <script src="../dist/rectangle.js" type="module"></script>
-    <script src="../dist/circle.js" type="module"></script>
+    <script src="../dist/models/objects/2d/line.js" type="module"></script>
+    <script src="../dist/models/objects/2d/rectangle.js" type="module"></script>
+    <script src="../dist/models/objects/2d/circle.js" type="module"></script>
     <script src="../dist/clear.js" type="module"></script>
-    <script src="../dist/cube.js" type="module"></script>
+    <script src="../dist/models/objects/3d/cube.js" type="module"></script>
 </body>
 </html>
