--- a/src/canvas.html
+++ b/src/canvas.html
@@ -20,6 +20,7 @@
             <button id="clearCanvas">x Clear Canvas</button>
         </div>
         <canvas id="drawingCanvas" width="800" height="600"></canvas>
+        <div id="instructions" style="position: absolute; bottom: 10px; left: 10px; color: #333; font-family: Arial, sans-serif; font-size: 14px;"></div>
     </div>
 
     <!-- Initialize canvas context first -->
@@ -52,24 +53,61 @@
         };
 
         // Initialize when DOM is loaded
-        document.addEventListener('DOMContentLoaded', window.initCanvas);
-        
+        document.addEventListener('DOMContentLoaded', function() {
+            window.initCanvas();
+            console.log('Canvas initialized in DOMContentLoaded');
+
+            // Verify global variables
+            setTimeout(() => {
+                console.log('Checking globals:',
+                    'canvas:', window.canvas ? 'OK' : 'MISSING',
+                    'ctx:', window.ctx ? 'OK' : 'MISSING');
+            }, 500);
+        });
+
         // Dynamic script loading with cache busting
         function loadScript(src) {
-            const timestamp = new Date().getTime();
-            const script = document.createElement('script');
-            script.type = 'module';
-            script.src = src + '?v=' + timestamp;
-            document.body.appendChild(script);
+            return new Promise((resolve, reject) => {
+                const timestamp = new Date().getTime();
+                const script = document.createElement('script');
+                script.type = 'module';
+                script.src = src + '?v=' + timestamp;
+                script.onload = () => {
+                    console.log('Script loaded:', src);
+                    resolve();
+                };
+                script.onerror = () => {
+                    console.error('Failed to load script:', src);
+                    reject();
+                };
+                document.body.appendChild(script);
+            });
         }
-        
+
         // Wait for DOM to be loaded before adding scripts
         document.addEventListener('DOMContentLoaded', function() {
-            loadScript('../dist/models/objects/2d/line.js');
-            loadScript('../dist/models/objects/2d/rectangle.js');
-            loadScript('../dist/models/objects/2d/circle.js');
-            loadScript('../dist/clear.js');
-            loadScript('../dist/models/objects/3d/cube.js');
+            console.log('Loading scripts...');
+            // Load scripts in sequence to ensure proper initialization order
+            loadScript('../dist/models/objects/2d/line.js')
+                .then(() => loadScript('../dist/models/objects/2d/rectangle.js'))
+                .then(() => loadScript('../dist/models/objects/2d/circle.js'))
+                .then(() => loadScript('../dist/clear.js'))
+                .then(() => loadScript('../dist/models/objects/3d/cube.js'))
+                .then(() => {
+                    console.log('All scripts loaded successfully');
+
+                    // Re-initialize event listeners to ensure they're attached after script loading
+                    setTimeout(() => {
+                        console.log('Re-initializing event listeners');
+                        // Force re-initialization of event handlers if modules export init functions
+                        if (window.initCubeDrawing) {
+                            window.initCubeDrawing();
+                        }
+                    }, 100);
+                })
+                .catch(error => {
+                    console.error('Error loading scripts:', error);
+                });
         });
     </script>
 </body>
