- some regression to fix

--- a/src/canvas.html
+++ b/src/canvas.html
@@ -103,6 +103,18 @@
                         if (window.initCubeDrawing) {
                             window.initCubeDrawing();
                         }
+                        if (window.initLineDrawing) {
+                            window.initLineDrawing();
+                        }
+                        if (window.initRectangleDrawing) {
+                            window.initRectangleDrawing();
+                        }
+                        if (window.initCircleDrawing) {
+                            window.initCircleDrawing();
+                        }
+                        if (window.initClearCanvas) {
+                            window.initClearCanvas();
+                        }
                     }, 100);
                 })
                 .catch(error => {
