--- a/src/canvas.html
+++ b/src/canvas.html
@@ -21,6 +21,12 @@
         </div>
         <div id="app-version" style="position: absolute; top: 10px; right: 10px; font-size: 14px; background-color: rgba(255,255,255,0.8); padding: 5px 10px; border-radius: 3px; border: 1px solid #ccc;">Loading version...</div>
         <canvas id="drawingCanvas" width="800" height="600"></canvas>
+        <div id="toolbar" style="margin-top: 10px; padding: 5px; background-color: #f0f0f0; border-radius: 4px;">
+            <label style="margin-right: 5px; font-family: Arial, sans-serif; font-size: 14px; vertical-align: middle;">
+                <input type="checkbox" id="toggleLegend" checked style="vertical-align: middle;"> 
+                Show Legend Information
+            </label>
+        </div>
         <div id="instructions" style="position: absolute; bottom: 10px; left: 10px; color: #333; font-family: Arial, sans-serif; font-size: 14px;"></div>
         <div id="version" style="position: absolute; bottom: 30px; left: 10px; color: #333; font-family: Arial, sans-serif; font-size: 14px;"></div>
     </div>
